--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,9 @@
           "extensions": [".js", ".jsx", ".ts", ".tsx"],
           "moduleDirectory": ["node_modules", "src/"]
         }
+      },
+      "react": {
+        "version": "detect"
       }
     }
   }
